--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "0.17.1",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "react-useinterval": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
